Fix left margin for aligned forms

--- a/stylesheets/components/_forms.scss
+++ b/stylesheets/components/_forms.scss
@@ -531,7 +531,7 @@ Styleguide 8.8
             text-align: right;
         }
 
-        .form__controls { margin-left: em($horizontal-offset); }
+        .form__controls { margin-left: em(20px); }
 
         .form__help--block { margin-bottom: 0; }
 
